--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "fmt",
   "version": "0.1.0",
   "description": "String formating using commonly used standards",
-  "main": "index.js",
+  "main": "./lib/umd/index.js",
+  "module": "./lib/esm5/index.js",
+  "typings": "./lib/types/index.d.ts",
   "scripts": {
-    "build": "tsc -p .",
+    "build": "tsc && rollup -c",
     "test": "node test.js"
   },
   "keywords": [
@@ -18,6 +20,8 @@
   "repository": "github:carlcalderon/fmt",
   "devDependencies": {
     "@types/node": "^12.7.3",
+    "rollup": "^1.20.3",
+    "rollup-plugin-typescript2": "^0.24.0",
     "typescript": "^3.6.2"
   }
 }
