--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "moduleResolution": "node",
+    "module": "esnext",
     "target": "es5",
     "declaration": true,
     "esModuleInterop": true,
-    "outDir": "./lib",
+    "outDir": "./lib/bundle",
+    "declarationDir": "./lib/types",
     "experimentalDecorators": true,
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
