Add verification script to be run before `npm publish`

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "typings": "./lib/types/index.d.ts",
   "scripts": {
     "clean": "shx rm -rf lib/",
+    "prebuild": "npm run clean",
     "build": "tsc && rollup -c",
-    "test": "node test.js"
+    "test": "node test.js",
+    "verify": "npm run build && npm test && npm publish --dry-run"
   },
   "keywords": [
     "string",
