--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paydirt/fmt",
-  "version": "0.2.1-rc.3",
+  "version": "0.2.1",
   "description": "String formating using commonly used standards",
   "main": "./lib/umd/index.js",
   "module": "./lib/esm5/index.js",
