Replace JavaScript test with TypeScript based test

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "shx rm -rf lib/",
     "prebuild": "npm run clean",
     "build": "tsc && rollup -c",
-    "test": "node test.js",
+    "test": "tsc --outFile /dev/stdout test.ts | node -",
     "verify": "npm run build && npm test && npm publish --dry-run"
   },
   "keywords": [
