--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./lib/umd/index.js",
   "module": "./lib/esm5/index.js",
   "typings": "./lib/types/index.d.ts",
+  "type": "module",
   "scripts": {
     "repl": "node -e \"require('repl').start('> ').context.fmt = require('./lib/umd')\"",
     "clean": "shx rm -rf lib/",
@@ -28,10 +29,10 @@
   "license": "MIT",
   "repository": "github:carlcalderon/fmt",
   "devDependencies": {
-    "@types/node": "^17.0.10",
-    "rollup": "^2.65.0",
-    "rollup-plugin-typescript2": "^0.24.3",
+    "@types/node": "^20.2.5",
+    "rollup": "^3.23.1",
+    "rollup-plugin-typescript2": "^0.34.1",
     "shx": "^0.3.4",
-    "typescript": "^4.5.5"
+    "typescript": "^5.1.3"
   }
 }
