Repair test script after package updates

--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "./lib/umd/index.js",
   "module": "./lib/esm5/index.js",
   "typings": "./lib/types/index.d.ts",
-  "type": "module",
   "scripts": {
     "repl": "node -e \"require('repl').start('> ').context.fmt = require('./lib/umd')\"",
     "clean": "shx rm -rf lib/",
     "prebuild": "npm run clean",
     "build": "tsc && rollup -c",
-    "test": "tsc --outFile /dev/stdout test.ts | node -",
+    "test": "tsc --module system --outFile /dev/stdout test.ts | node -",
     "verify": "npm run build && npm test && npm publish --dry-run"
   },
   "keywords": [
